--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -352,6 +352,85 @@
   filter: invert(100%);
 }
 
+.project_wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+}
+
+.project_wrapper small {
+  left: -80px;
+}
+
+.project_wrapper small::after {
+  right: 110px;
+}
+
+.project_wrapper h2 {
+  font-size: 30px;
+}
+
+.project_wrapper .project_cards {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+.project_wrapper .project_cards .project_card {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.project_wrapper .project_cards .project_card .project_information {
+  position: absolute;
+  bottom: -50%;
+  left: 0;
+  width: 100%;
+  background-color: #1e1e1e;
+  padding: 20px 30px;
+  color: #fff;
+  z-index: 5;
+  transition: 1s;
+}
+
+.project_wrapper .project_cards .project_card:hover .project_information {
+  bottom: 0;
+}
+
+.project_wrapper .project_cards .project_card::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 0%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: 0.6s;
+}
+
+.project_wrapper .project_cards .project_card:hover::after {
+  height: 100%;
+}
+
+.project_wrapper .project_cards .project_card:nth-of-type(1) {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.project_wrapper .project_cards .project_card:nth-of-type(6) {
+  grid-column-start: 3;
+  grid-column-end: 5;
+}
+
+.project_wrapper .project_cards img {
+  width: 100%;
+}
+
 /* Responsive Media Queries */
 @media screen and (max-width: 1600px) {
   .Header_wrapper::after {
@@ -460,6 +539,15 @@
   .skills_wrapper .skills_cards {
     width: 100%;
   }
+
+  .project_wrapper .project_cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .project_wrapper .project_cards .project_card:nth-of-type(6) {
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -543,6 +631,20 @@
   .about_wrapper .about_header {
     width: 80%;
   }
+
+  .project_wrapper .project_cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .project_wrapper .project_cards .project_card:nth-of-type(1) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .project_wrapper .project_cards .project_card:nth-of-type(6) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -578,5 +680,19 @@
 
   .skills_wrapper .skills_cards {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .project_wrapper .project_cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .project_wrapper .project_cards .project_card:nth-of-type(1) {
+    grid-column-start: auto;
+    grid-column-end: auto;
+  }
+
+  .project_wrapper .project_cards .project_card:nth-of-type(6) {
+    grid-column-start: auto;
+    grid-column-end: auto;
   }
 }
