--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -429,6 +429,35 @@
 
 .project_wrapper .project_cards img {
   width: 100%;
+  height: 100%;
+}
+
+/* Brands Section */
+.brands_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.brands_wrapper p {
+  width: 60%;
+}
+
+.brands_wrapper .brands {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 20px;
+}
+
+.brands_wrapper .brands img {
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  transition: 0.6s;
+}
+
+.brands_wrapper .brands img:hover {
+  filter: invert(100%);
 }
 
 /* Responsive Media Queries */
@@ -548,6 +577,10 @@
     grid-column-start: 1;
     grid-column-end: 4;
   }
+
+  .brands_wrapper .brands {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -644,6 +677,14 @@
   .project_wrapper .project_cards .project_card:nth-of-type(6) {
     grid-column-start: 1;
     grid-column-end: 3;
+  }
+
+  .brands_wrapper .brands {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .brands_wrapper p {
+    width: 90%;
   }
 }
 
