--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -112,6 +112,7 @@ nav .social:hover i:not(:hover) {
     transition: 0.6s;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
+    z-index: 9999;
   }
 
   nav ul li {
