--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,50 @@ section {
   width: 50px;
   background-color: #7e7e7e;
 }
+
+.section_header {
+  min-height: 380px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  text-align: center;
+  background-color: #1e1e1e;
+  color: #fff;
+  z-index: 1;
+  position: relative;
+}
+
+.section_header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: url(assets/page_title.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
+
+.section_header h2 {
+  font-size: 45px;
+  color: #fff;
+}
+
+.section_header Link {
+  color: #fff;
+}
+
+.section_header ul li {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.section_header a {
+  color: var(--primary-color);
+}
