Seccion About Me de About

--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -88,6 +88,60 @@
   cursor: pointer;
 }
 
+.about {
+  background-color: #f8f8f8;
+}
+
+.about_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.about_container .about_info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+}
+
+.about_container .about_info h2 {
+  font-size: 38px;
+}
+
+.about_container .about_info p {
+  font-size: 18px;
+}
+
+.about_container .about_info .achievement {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  width: 100%;
+}
+
+.about_container .about_info .achievement p {
+  font-size: 50px;
+  font-weight: 700;
+  color: var(--primary-color);
+}
+
+.about_container .about_info .achievement p span {
+  color: #1e1e1e;
+  font-size: 15px;
+  display: block;
+}
+
+.about_container .about_image {
+  width: 50%;
+}
+
+.about_container .about_image img {
+  width: 100%;
+}
+
 @media screen and (max-width: 1300px) {
   .about_wrapper .about_cards {
     padding: 0 2%;
@@ -102,11 +156,28 @@
   .about_wrapper .about_cards .card {
     text-align: start;
   }
+
+  .about_container .about_info .achievement {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media screen and (max-width: 900px) {
   .about_wrapper .about_cards {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .about_container {
+    flex-direction: column-reverse;
+    margin-bottom: 50px;
+  }
+
+  .about_container .about_image {
+    width: 100%;
+  }
+
+  .about_container .about_info {
+    width: 100%;
   }
 }
 
